LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/HRHEAD__c.field-meta.xml
<CustomField>
    <fullName>HRHEAD__c</fullName>
    <description>HRHEAD</description>
    <externalDeveloperName>HRHEAD</externalDeveloperName>
    <label>HRHEAD</label>
    <length>100</length>
    <type>Text</type>
</CustomField>