LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_FEE__c.field-meta.xml
<CustomField>
    <fullName>ICAI_FEE__c</fullName>
    <description>ICAI_FEE</description>
    <externalDeveloperName>ICAI_FEE</externalDeveloperName>
    <label>ICAI_FEE</label>
    <length>25</length>
    <type>Text</type>
</CustomField>