LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_FEE_FLAG__c.field-meta.xml
<CustomField>
    <fullName>ICAI_FEE_FLAG__c</fullName>
    <description>ICAI_FEE_FLAG</description>
    <externalDeveloperName>ICAI_FEE_FLAG</externalDeveloperName>
    <label>ICAI_FEE_FLAG</label>
    <length>2</length>
    <type>Text</type>
</CustomField>