LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_INACTIVE_REASON__c.field-meta.xml
<CustomField>
    <fullName>ICAI_INACTIVE_REASON__c</fullName>
    <description>ICAI_INACTIVE_REASON</description>
    <externalDeveloperName>ICAI_INACTIVE_REASON</externalDeveloperName>
    <label>ICAI_INACTIVE_REASON</label>
    <length>100</length>
    <type>Text</type>
</CustomField>