LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_LEAVE_DT__c.field-meta.xml
<CustomField>
    <fullName>ICAI_LEAVE_DT__c</fullName>
    <description>ICAI_LEAVE_DT</description>
    <externalDeveloperName>ICAI_LEAVE_DT</externalDeveloperName>
    <label>ICAI_LEAVE_DT</label>
    <type>DateTime</type>
</CustomField>