LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_MEM_NO__c.field-meta.xml
<CustomField>
    <fullName>ICAI_MEM_NO__c</fullName>
    <description>ICAI_MEM_NO</description>
    <externalDeveloperName>ICAI_MEM_NO</externalDeveloperName>
    <label>ICAI_MEM_NO</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>