LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_NAME__c.field-meta.xml
<CustomField>
    <fullName>ICAI_NAME__c</fullName>
    <description>ICAI_NAME</description>
    <externalDeveloperName>ICAI_NAME</externalDeveloperName>
    <label>ICAI_NAME</label>
    <length>40</length>
    <type>Text</type>
</CustomField>