LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_START_DT__c.field-meta.xml
<CustomField>
    <fullName>ICAI_START_DT__c</fullName>
    <description>ICAI_START_DT</description>
    <externalDeveloperName>ICAI_START_DT</externalDeveloperName>
    <label>ICAI_START_DT</label>
    <type>DateTime</type>
</CustomField>