LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ICAI_STS__c.field-meta.xml
<CustomField>
    <fullName>ICAI_STS__c</fullName>
    <description>ICAI_STS</description>
    <externalDeveloperName>ICAI_STS</externalDeveloperName>
    <label>ICAI_STS</label>
    <length>2</length>
    <type>Text</type>
</CustomField>