LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IFSC_CODE__c.field-meta.xml
<CustomField>
    <fullName>IFSC_CODE__c</fullName>
    <description>IFSC_CODE</description>
    <externalDeveloperName>IFSC_CODE</externalDeveloperName>
    <label>IFSC_CODE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>