LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/INCASE_TRANSFERDATE__c.field-meta.xml
<CustomField>
    <fullName>INCASE_TRANSFERDATE__c</fullName>
    <description>INCASE_TRANSFERDATE</description>
    <externalDeveloperName>INCASE_TRANSFERDATE</externalDeveloperName>
    <label>INCASE_TRANSFERDATE</label>
    <type>DateTime</type>
</CustomField>