LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/INDEED_PARTNER__c.field-meta.xml
<CustomField>
    <fullName>INDEED_PARTNER__c</fullName>
    <description>INDEED_PARTNER</description>
    <externalDeveloperName>INDEED_PARTNER</externalDeveloperName>
    <label>INDEED_PARTNER</label>
    <length>2</length>
    <type>Text</type>
</CustomField>