LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/INT_DATE__c.field-meta.xml
<CustomField>
    <fullName>INT_DATE__c</fullName>
    <description>INT_DATE</description>
    <externalDeveloperName>INT_DATE</externalDeveloperName>
    <label>INT_DATE</label>
    <type>DateTime</type>
</CustomField>