LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/INTER_SER_ID__c.field-meta.xml
<CustomField>
    <fullName>INTER_SER_ID__c</fullName>
    <description>INTER_SER_ID</description>
    <externalDeveloperName>INTER_SER_ID</externalDeveloperName>
    <label>INTER_SER_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>