LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/INTIMATION_ICAI_JOINING__c.field-meta.xml
<CustomField>
    <fullName>INTIMATION_ICAI_JOINING__c</fullName>
    <description>INTIMATION_ICAI_JOINING</description>
    <externalDeveloperName>INTIMATION_ICAI_JOINING</externalDeveloperName>
    <label>INTIMATION_ICAI_JOINING</label>
    <length>8</length>
    <type>Text</type>
</CustomField>