LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IS_ACTIVE__c.field-meta.xml
<CustomField>
    <fullName>IS_ACTIVE__c</fullName>
    <description>IS_ACTIVE</description>
    <externalDeveloperName>IS_ACTIVE</externalDeveloperName>
    <label>IS_ACTIVE</label>
    <length>1</length>
    <type>Text</type>
</CustomField>