LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IS_COP_HELD__c.field-meta.xml
<CustomField>
    <fullName>IS_COP_HELD__c</fullName>
    <description>IS_COP_HELD</description>
    <externalDeveloperName>IS_COP_HELD</externalDeveloperName>
    <label>IS_COP_HELD</label>
    <length>2</length>
    <type>Text</type>
</CustomField>