LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IS_HANDICAP__c.field-meta.xml
<CustomField>
    <fullName>IS_HANDICAP__c</fullName>
    <description>IS_HANDICAP</description>
    <externalDeveloperName>IS_HANDICAP</externalDeveloperName>
    <label>IS_HANDICAP</label>
    <length>1</length>
    <type>Text</type>
</CustomField>