LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IS_REFERENCE_CHK__c.field-meta.xml
<CustomField>
    <fullName>IS_REFERENCE_CHK__c</fullName>
    <description>IS_REFERENCE_CHK</description>
    <externalDeveloperName>IS_REFERENCE_CHK</externalDeveloperName>
    <label>IS_REFERENCE_CHK</label>
    <length>1</length>
    <type>Text</type>
</CustomField>