LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IS_SECONDARY__c.field-meta.xml
<CustomField>
    <fullName>IS_SECONDARY__c</fullName>
    <description>IS_SECONDARY</description>
    <externalDeveloperName>IS_SECONDARY</externalDeveloperName>
    <label>IS_SECONDARY</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>