LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/IT_DATA_UP_DATE__c.field-meta.xml
<CustomField>
    <fullName>IT_DATA_UP_DATE__c</fullName>
    <description>IT_DATA_UP_DATE</description>
    <externalDeveloperName>IT_DATA_UP_DATE</externalDeveloperName>
    <label>IT_DATA_UP_DATE</label>
    <type>DateTime</type>
</CustomField>