LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/JOIN_DATE__c.field-meta.xml
<CustomField>
    <fullName>JOIN_DATE__c</fullName>
    <description>JOIN_DATE</description>
    <externalDeveloperName>JOIN_DATE</externalDeveloperName>
    <label>JOIN_DATE</label>
    <type>DateTime</type>
</CustomField>