LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/JOINING_BONUS__c.field-meta.xml
<CustomField>
    <fullName>JOINING_BONUS__c</fullName>
    <description>JOINING_BONUS</description>
    <externalDeveloperName>JOINING_BONUS</externalDeveloperName>
    <label>JOINING_BONUS</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>