LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/LANGAUGE_KNOWN__c.field-meta.xml
<CustomField>
    <fullName>LANGAUGE_KNOWN__c</fullName>
    <description>LANGAUGE_KNOWN</description>
    <externalDeveloperName>LANGAUGE_KNOWN</externalDeveloperName>
    <label>LANGAUGE_KNOWN</label>
    <length>100</length>
    <type>Text</type>
</CustomField>