LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/LAPTOP_MDL_NO__c.field-meta.xml
<CustomField>
    <fullName>LAPTOP_MDL_NO__c</fullName>
    <description>LAPTOP_MDL_NO</description>
    <externalDeveloperName>LAPTOP_MDL_NO</externalDeveloperName>
    <label>LAPTOP_MDL_NO</label>
    <length>25</length>
    <type>Text</type>
</CustomField>