LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/LEAVE_DATE__c.field-meta.xml
<CustomField>
    <fullName>LEAVE_DATE__c</fullName>
    <description>LEAVE_DATE</description>
    <externalDeveloperName>LEAVE_DATE</externalDeveloperName>
    <label>LEAVE_DATE</label>
    <type>DateTime</type>
</CustomField>