LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/LEAVE_PRV_PRINCIPAL__c.field-meta.xml
<CustomField>
    <fullName>LEAVE_PRV_PRINCIPAL__c</fullName>
    <description>LEAVE_PRV_PRINCIPAL</description>
    <externalDeveloperName>LEAVE_PRV_PRINCIPAL</externalDeveloperName>
    <label>LEAVE_PRV_PRINCIPAL</label>
    <length>15</length>
    <type>Text</type>
</CustomField>