LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/LOC_ID__c.field-meta.xml
<CustomField>
    <fullName>LOC_ID__c</fullName>
    <description>LOC_ID</description>
    <externalDeveloperName>LOC_ID</externalDeveloperName>
    <label>LOC_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>