LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MANNUAL_TAX__c.field-meta.xml
<CustomField>
    <fullName>MANNUAL_TAX__c</fullName>
    <description>MANNUAL_TAX</description>
    <externalDeveloperName>MANNUAL_TAX</externalDeveloperName>
    <label>MANNUAL_TAX</label>
    <length>1</length>
    <type>Text</type>
</CustomField>