LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MARITAL_STATUS__c.field-meta.xml
<CustomField>
    <fullName>MARITAL_STATUS__c</fullName>
    <description>MARITAL_STATUS</description>
    <externalDeveloperName>MARITAL_STATUS</externalDeveloperName>
    <label>MARITAL_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>