LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MARRIAGE_DATE__c.field-meta.xml
<CustomField>
    <fullName>MARRIAGE_DATE__c</fullName>
    <description>MARRIAGE_DATE</description>
    <externalDeveloperName>MARRIAGE_DATE</externalDeveloperName>
    <label>MARRIAGE_DATE</label>
    <type>DateTime</type>
</CustomField>