LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MEDICLAIM__c.field-meta.xml
<CustomField>
    <fullName>MEDICLAIM__c</fullName>
    <description>MEDICLAIM</description>
    <externalDeveloperName>MEDICLAIM</externalDeveloperName>
    <label>MEDICLAIM</label>
    <length>1</length>
    <type>Text</type>
</CustomField>