LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MEMBER_FEESPAID_CURNTYEAR__c.field-meta.xml
<CustomField>
    <fullName>MEMBER_FEESPAID_CURNTYEAR__c</fullName>
    <description>MEMBER_FEESPAID_CURNTYEAR</description>
    <externalDeveloperName>MEMBER_FEESPAID_CURNTYEAR</externalDeveloperName>
    <label>MEMBER_FEESPAID_CURNTYEAR</label>
    <length>8</length>
    <type>Text</type>
</CustomField>