LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MEMBERSHIP_STATUS__c.field-meta.xml
<CustomField>
    <fullName>MEMBERSHIP_STATUS__c</fullName>
    <description>MEMBERSHIP_STATUS</description>
    <externalDeveloperName>MEMBERSHIP_STATUS</externalDeveloperName>
    <label>MEMBERSHIP_STATUS</label>
    <length>8</length>
    <type>Text</type>
</CustomField>