LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MENTOR_ID__c.field-meta.xml
<CustomField>
    <fullName>MENTOR_ID__c</fullName>
    <description>MENTOR_ID</description>
    <externalDeveloperName>MENTOR_ID</externalDeveloperName>
    <label>MENTOR_ID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>