LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MINDER__c.field-meta.xml
<CustomField>
    <fullName>MINDER__c</fullName>
    <description>MINDER</description>
    <externalDeveloperName>MINDER</externalDeveloperName>
    <label>MINDER</label>
    <length>100</length>
    <type>Text</type>
</CustomField>