LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MOTHER_NAME__c.field-meta.xml
<CustomField>
    <fullName>MOTHER_NAME__c</fullName>
    <description>MOTHER_NAME</description>
    <externalDeveloperName>MOTHER_NAME</externalDeveloperName>
    <label>MOTHER_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>