LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/MOTHER_TOUNGE__c.field-meta.xml
<CustomField>
    <fullName>MOTHER_TOUNGE__c</fullName>
    <description>MOTHER_TOUNGE</description>
    <externalDeveloperName>MOTHER_TOUNGE</externalDeveloperName>
    <label>MOTHER_TOUNGE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>