LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NAME_IN_ICAI__c.field-meta.xml
<CustomField>
    <fullName>NAME_IN_ICAI__c</fullName>
    <description>NAME_IN_ICAI</description>
    <externalDeveloperName>NAME_IN_ICAI</externalDeveloperName>
    <label>NAME_IN_ICAI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>