LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NAME_IN_PASSPORT__c.field-meta.xml
<CustomField>
    <fullName>NAME_IN_PASSPORT__c</fullName>
    <description>NAME_IN_PASSPORT</description>
    <externalDeveloperName>NAME_IN_PASSPORT</externalDeveloperName>
    <label>NAME_IN_PASSPORT</label>
    <length>100</length>
    <type>Text</type>
</CustomField>