LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NAMEOF_LOANSTAFF__c.field-meta.xml
<CustomField>
    <fullName>NAMEOF_LOANSTAFF__c</fullName>
    <description>NAMEOF_LOANSTAFF</description>
    <externalDeveloperName>NAMEOF_LOANSTAFF</externalDeveloperName>
    <label>NAMEOF_LOANSTAFF</label>
    <length>8</length>
    <type>Text</type>
</CustomField>