LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NATIONALITY__c.field-meta.xml
<CustomField>
    <fullName>NATIONALITY__c</fullName>
    <description>NATIONALITY</description>
    <externalDeveloperName>NATIONALITY</externalDeveloperName>
    <label>NATIONALITY</label>
    <length>25</length>
    <type>Text</type>
</CustomField>