LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NEXT_APPRISAL_DT__c.field-meta.xml
<CustomField>
    <fullName>NEXT_APPRISAL_DT__c</fullName>
    <description>NEXT_APPRISAL_DT</description>
    <externalDeveloperName>NEXT_APPRISAL_DT</externalDeveloperName>
    <label>NEXT_APPRISAL_DT</label>
    <type>DateTime</type>
</CustomField>