LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NOMINEE_NAME__c.field-meta.xml
<CustomField>
    <fullName>NOMINEE_NAME__c</fullName>
    <description>NOMINEE_NAME</description>
    <externalDeveloperName>NOMINEE_NAME</externalDeveloperName>
    <label>NOMINEE_NAME</label>
    <length>100</length>
    <type>Text</type>
</CustomField>