LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/NONAME_REASON_ICAI__c.field-meta.xml
<CustomField>
    <fullName>NONAME_REASON_ICAI__c</fullName>
    <description>NONAME_REASON_ICAI</description>
    <externalDeveloperName>NONAME_REASON_ICAI</externalDeveloperName>
    <label>NONAME_REASON_ICAI</label>
    <length>200</length>
    <type>Text</type>
</CustomField>