LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/ODJ_DATE__c.field-meta.xml
<CustomField>
    <fullName>ODJ_DATE__c</fullName>
    <description>ODJ_DATE</description>
    <externalDeveloperName>ODJ_DATE</externalDeveloperName>
    <label>ODJ_DATE</label>
    <type>DateTime</type>
</CustomField>