LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OTHER_INPUT__c.field-meta.xml
<CustomField>
    <fullName>OTHER_INPUT__c</fullName>
    <description>OTHER_INPUT</description>
    <externalDeveloperName>OTHER_INPUT</externalDeveloperName>
    <label>OTHER_INPUT</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>