LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OVER_ADD__c.field-meta.xml
<CustomField>
    <fullName>OVER_ADD__c</fullName>
    <description>OVER_ADD</description>
    <externalDeveloperName>OVER_ADD</externalDeveloperName>
    <label>OVER_ADD</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>