LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OVER_PIN__c.field-meta.xml
<CustomField>
    <fullName>OVER_PIN__c</fullName>
    <description>OVER_PIN</description>
    <externalDeveloperName>OVER_PIN</externalDeveloperName>
    <label>OVER_PIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>