LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OVER_TEL__c.field-meta.xml
<CustomField>
    <fullName>OVER_TEL__c</fullName>
    <description>OVER_TEL</description>
    <externalDeveloperName>OVER_TEL</externalDeveloperName>
    <label>OVER_TEL</label>
    <length>20</length>
    <type>Text</type>
</CustomField>