LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OVERBANK_ACC_ID__c.field-meta.xml
<CustomField>
    <fullName>OVERBANK_ACC_ID__c</fullName>
    <description>OVERBANK_ACC_ID</description>
    <externalDeveloperName>OVERBANK_ACC_ID</externalDeveloperName>
    <label>OVERBANK_ACC_ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>