LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/OVERBANK_AID__c.field-meta.xml
<CustomField>
    <fullName>OVERBANK_AID__c</fullName>
    <description>OVERBANK_AID</description>
    <externalDeveloperName>OVERBANK_AID</externalDeveloperName>
    <label>OVERBANK_AID</label>
    <length>8</length>
    <type>Text</type>
</CustomField>