LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PAN_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PAN_NUMBER__c</fullName>
    <description>PAN_NUMBER</description>
    <externalDeveloperName>PAN_NUMBER</externalDeveloperName>
    <label>PAN_NUMBER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>