LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PARTNER_PREVIEW__c.field-meta.xml
<CustomField>
    <fullName>PARTNER_PREVIEW__c</fullName>
    <description>PARTNER_PREVIEW</description>
    <externalDeveloperName>PARTNER_PREVIEW</externalDeveloperName>
    <label>PARTNER_PREVIEW</label>
    <length>200</length>
    <type>Text</type>
</CustomField>