LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT__c</fullName>
    <description>PASSPORT</description>
    <externalDeveloperName>PASSPORT</externalDeveloperName>
    <label>PASSPORT</label>
    <length>1</length>
    <type>Text</type>
</CustomField>