LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_COUNTRY__c</fullName>
    <description>PASSPORT_COUNTRY</description>
    <externalDeveloperName>PASSPORT_COUNTRY</externalDeveloperName>
    <label>PASSPORT_COUNTRY</label>
    <length>200</length>
    <type>Text</type>
</CustomField>