LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_DATE_OF_EXPIRY__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_DATE_OF_EXPIRY__c</fullName>
    <description>PASSPORT_DATE_OF_EXPIRY</description>
    <externalDeveloperName>PASSPORT_DATE_OF_EXPIRY</externalDeveloperName>
    <label>PASSPORT_DATE_OF_EXPIRY</label>
    <length>50</length>
    <type>Text</type>
</CustomField>