LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_NO__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_NO__c</fullName>
    <description>PASSPORT_NO</description>
    <externalDeveloperName>PASSPORT_NO</externalDeveloperName>
    <label>PASSPORT_NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>