LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_NUMBER__c</fullName>
    <description>PASSPORT_NUMBER</description>
    <externalDeveloperName>PASSPORT_NUMBER</externalDeveloperName>
    <label>PASSPORT_NUMBER</label>
    <length>50</length>
    <type>Text</type>
</CustomField>