LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_PLACE_OF_ISSUE__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_PLACE_OF_ISSUE__c</fullName>
    <description>PASSPORT_PLACE_OF_ISSUE</description>
    <externalDeveloperName>PASSPORT_PLACE_OF_ISSUE</externalDeveloperName>
    <label>PASSPORT_PLACE_OF_ISSUE</label>
    <length>200</length>
    <type>Text</type>
</CustomField>