LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PASSPORT_VALID_UPTO__c.field-meta.xml
<CustomField>
    <fullName>PASSPORT_VALID_UPTO__c</fullName>
    <description>PASSPORT_VALID_UPTO</description>
    <externalDeveloperName>PASSPORT_VALID_UPTO</externalDeveloperName>
    <label>PASSPORT_VALID_UPTO</label>
    <type>DateTime</type>
</CustomField>