LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PAYROLL_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PAYROLL_TYPE__c</fullName>
    <description>PAYROLL_TYPE</description>
    <externalDeveloperName>PAYROLL_TYPE</externalDeveloperName>
    <label>PAYROLL_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>