LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_ADDR__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_ADDR__c</fullName>
    <description>PERMNT_ADDR</description>
    <externalDeveloperName>PERMNT_ADDR</externalDeveloperName>
    <label>PERMNT_ADDR</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>