LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_CITY__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_CITY__c</fullName>
    <description>PERMNT_CITY</description>
    <externalDeveloperName>PERMNT_CITY</externalDeveloperName>
    <label>PERMNT_CITY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>