LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_COUNTRY__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_COUNTRY__c</fullName>
    <description>PERMNT_COUNTRY</description>
    <externalDeveloperName>PERMNT_COUNTRY</externalDeveloperName>
    <label>PERMNT_COUNTRY</label>
    <length>30</length>
    <type>Text</type>
</CustomField>