LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_DIST__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_DIST__c</fullName>
    <description>PERMNT_DIST</description>
    <externalDeveloperName>PERMNT_DIST</externalDeveloperName>
    <label>PERMNT_DIST</label>
    <length>30</length>
    <type>Text</type>
</CustomField>