LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_MAIL1__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_MAIL1__c</fullName>
    <description>PERMNT_MAIL1</description>
    <externalDeveloperName>PERMNT_MAIL1</externalDeveloperName>
    <label>PERMNT_MAIL1</label>
    <length>100</length>
    <type>Text</type>
</CustomField>