LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_MAIL2__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_MAIL2__c</fullName>
    <description>PERMNT_MAIL2</description>
    <externalDeveloperName>PERMNT_MAIL2</externalDeveloperName>
    <label>PERMNT_MAIL2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>