LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_MOBILE__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_MOBILE__c</fullName>
    <description>PERMNT_MOBILE</description>
    <externalDeveloperName>PERMNT_MOBILE</externalDeveloperName>
    <label>PERMNT_MOBILE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>