LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_OFF_TELE__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_OFF_TELE__c</fullName>
    <description>PERMNT_OFF_TELE</description>
    <externalDeveloperName>PERMNT_OFF_TELE</externalDeveloperName>
    <label>PERMNT_OFF_TELE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>