LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_PIN__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_PIN__c</fullName>
    <description>PERMNT_PIN</description>
    <externalDeveloperName>PERMNT_PIN</externalDeveloperName>
    <label>PERMNT_PIN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>