LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_RES_STD__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_RES_STD__c</fullName>
    <description>PERMNT_RES_STD</description>
    <externalDeveloperName>PERMNT_RES_STD</externalDeveloperName>
    <label>PERMNT_RES_STD</label>
    <length>10</length>
    <type>Text</type>
</CustomField>