LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_RES_TELE2__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_RES_TELE2__c</fullName>
    <description>PERMNT_RES_TELE2</description>
    <externalDeveloperName>PERMNT_RES_TELE2</externalDeveloperName>
    <label>PERMNT_RES_TELE2</label>
    <length>20</length>
    <type>Text</type>
</CustomField>