LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_RES_TELE__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_RES_TELE__c</fullName>
    <description>PERMNT_RES_TELE</description>
    <externalDeveloperName>PERMNT_RES_TELE</externalDeveloperName>
    <label>PERMNT_RES_TELE</label>
    <length>20</length>
    <type>Text</type>
</CustomField>