LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PERMNT_STATE__c.field-meta.xml
<CustomField>
    <fullName>PERMNT_STATE__c</fullName>
    <description>PERMNT_STATE</description>
    <externalDeveloperName>PERMNT_STATE</externalDeveloperName>
    <label>PERMNT_STATE</label>
    <length>30</length>
    <type>Text</type>
</CustomField>