LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PF_FLAG__c.field-meta.xml
<CustomField>
    <fullName>PF_FLAG__c</fullName>
    <description>PF_FLAG</description>
    <externalDeveloperName>PF_FLAG</externalDeveloperName>
    <label>PF_FLAG</label>
    <length>1</length>
    <type>Text</type>
</CustomField>