LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PF_NO__c.field-meta.xml
<CustomField>
    <fullName>PF_NO__c</fullName>
    <description>PF_NO</description>
    <externalDeveloperName>PF_NO</externalDeveloperName>
    <label>PF_NO</label>
    <length>30</length>
    <type>Text</type>
</CustomField>