LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PF_TYPE__c.field-meta.xml
<CustomField>
    <fullName>PF_TYPE__c</fullName>
    <description>PF_TYPE</description>
    <externalDeveloperName>PF_TYPE</externalDeveloperName>
    <label>PF_TYPE</label>
    <length>8</length>
    <type>Text</type>
</CustomField>