LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PPF_DATE__c.field-meta.xml
<CustomField>
    <fullName>PPF_DATE__c</fullName>
    <description>PPF_DATE</description>
    <externalDeveloperName>PPF_DATE</externalDeveloperName>
    <label>PPF_DATE</label>
    <type>DateTime</type>
</CustomField>