LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PPF_NO__c.field-meta.xml
<CustomField>
    <fullName>PPF_NO__c</fullName>
    <description>PPF_NO</description>
    <externalDeveloperName>PPF_NO</externalDeveloperName>
    <label>PPF_NO</label>
    <length>20</length>
    <type>Text</type>
</CustomField>