LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PPF_RATE__c.field-meta.xml
<CustomField>
    <fullName>PPF_RATE__c</fullName>
    <description>PPF_RATE</description>
    <externalDeveloperName>PPF_RATE</externalDeveloperName>
    <label>PPF_RATE</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>