LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PPF_REMITANCE__c.field-meta.xml
<CustomField>
    <fullName>PPF_REMITANCE__c</fullName>
    <description>PPF_REMITANCE</description>
    <externalDeveloperName>PPF_REMITANCE</externalDeveloperName>
    <label>PPF_REMITANCE</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>