LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PRINCIPAL_EMP_CODE__c.field-meta.xml
<CustomField>
    <fullName>PRINCIPAL_EMP_CODE__c</fullName>
    <description>PRINCIPAL_EMP_CODE</description>
    <externalDeveloperName>PRINCIPAL_EMP_CODE</externalDeveloperName>
    <label>PRINCIPAL_EMP_CODE</label>
    <length>50</length>
    <type>Text</type>
</CustomField>