LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PRINCIPAL_NAME__c.field-meta.xml
<CustomField>
    <fullName>PRINCIPAL_NAME__c</fullName>
    <description>PRINCIPAL_NAME</description>
    <externalDeveloperName>PRINCIPAL_NAME</externalDeveloperName>
    <label>PRINCIPAL_NAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>