LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PRINCIPLE_PARTNERNOT_REGI__c.field-meta.xml
<CustomField>
    <fullName>PRINCIPLE_PARTNERNOT_REGI__c</fullName>
    <description>PRINCIPLE_PARTNERNOT_REGI</description>
    <externalDeveloperName>PRINCIPLE_PARTNERNOT_REGI</externalDeveloperName>
    <label>PRINCIPLE_PARTNERNOT_REGI</label>
    <length>8</length>
    <type>Text</type>
</CustomField>