LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PRO_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PRO_STATUS__c</fullName>
    <description>PRO_STATUS</description>
    <externalDeveloperName>PRO_STATUS</externalDeveloperName>
    <label>PRO_STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>