LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PROB_CONFIRM_STATUS__c.field-meta.xml
<CustomField>
    <fullName>PROB_CONFIRM_STATUS__c</fullName>
    <description>PROB_CONFIRM_STATUS</description>
    <externalDeveloperName>PROB_CONFIRM_STATUS</externalDeveloperName>
    <label>PROB_CONFIRM_STATUS</label>
    <length>1</length>
    <type>Text</type>
</CustomField>