LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PROB_DATE__c.field-meta.xml
<CustomField>
    <fullName>PROB_DATE__c</fullName>
    <description>PROB_DATE</description>
    <externalDeveloperName>PROB_DATE</externalDeveloperName>
    <label>PROB_DATE</label>
    <type>DateTime</type>
</CustomField>