LinKreta_POC_Repository/force-app/main/default/objects/GM_EMP__x/fields/PROBATION_PERIOD__c.field-meta.xml
<CustomField>
    <fullName>PROBATION_PERIOD__c</fullName>
    <description>PROBATION_PERIOD</description>
    <externalDeveloperName>PROBATION_PERIOD</externalDeveloperName>
    <label>PROBATION_PERIOD</label>
    <length>1</length>
    <type>Text</type>
</CustomField>